# VkVolume

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vulkan_samples.patch
scripts/: benchmark.py  benchmark_results_0.csv  benchmark_results_1.csv  benchmark_results_2.csv  benchmark_results_3.csv
shaders/: distance_map.comp  distance_map_anisotropic.comp  get_gradient_compute.glsl  gradient_map.comp  occupancy_map.comp  occupied_voxel_count.comp  occupied_voxel_count_reduce.comp  transfer_function.glsl  volume_render.frag  volume_render_clipped.vert  volume_render_plane_intersection.vert
src/: CMakeLists.txt  compute_distance_map.cpp  compute_distance_map.h  compute_gradient_map.cpp  compute_gradient_map.h  compute_occupied_voxel_count.cpp  compute_occupied_voxel_count.h  load_volume.cpp  load_volume.h  main.cpp  orbit_camera.cpp  orbit_camera.h  transfer_function.h  volume_component.cpp  volume_component.h  volume_render.cpp  volume_render.h  volume_render_subpass.cpp  volume_render_subpass.h
